# clypper

./: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  tox.ini
clypper/: __init__.py  cli.py  clypper.py  video_sources.py
tests/: __init__.py  test_clypper.py  test_input.txt
