[tool.poetry]
name = "clypper"
version = "0.0.3"
description = "Rapidly create supercuts from various video sources."

authors = ["kpj <kpjkpjkpjkpjkpjkpj@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/kpj/clypper"


[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
sh = "^2.0.7"
moviepy = "^1.0.3"
tqdm = "^4.66.5"
pytimeparse = "^1.1.8"
pytubefix = "^6.16.2"
opencv-python = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
tox = "^4.18.1"
bump2version = "^1.0.1"


[tool.poetry.scripts]
clypper = "clypper:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
